add workflow for git

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Simple News</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+<footer style="margin-top: 4rem; font-size: 0.9rem; color: #666;">
+  <hr style="margin-bottom: 1rem;">
+  <p>
+    <a href="privacy.html" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
+  </p>
+</footer>
 
 <body>
   <h1>📰 Simple News</h1>
