--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Simple News</title>
+  <title>Simpleton News</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+  
+<nav>
+  <a href="/" class="nav-link">Home</a>
+  <a href="/movies" class="nav-link">Movies</a>
+</nav>
+
+
   <h1>📰 Simple News</h1>
+  <h2>Simple, but accurate. No AI involved.</h2>
   <div id="news-container">Loading articles...</div>
 
 <script>
