--- a/movies.html
+++ b/movies.html
@@ -15,7 +15,7 @@
 
   <h1>🎬 Short Reviews</h1>
 
-  <p>Welcome to the movie section. Here’s where film content, reviews, or highlights could go.</p>
+  <p>Movies, some good, some bad.</p>
 
   <h2>Skip</h2>
   <ul>
