--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Simpleton News</title>
   <link rel="stylesheet" href="style.css" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7963408527527749"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
-  
+
 <nav>
   <a href="/" class="nav-link">Home</a>
   <a href="/movies" class="nav-link">Movies</a>
