--- a/movies.html
+++ b/movies.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Movies — Simple News</title>
   <link rel="stylesheet" href="style.css" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7963408527527749"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
