--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
      crossorigin="anonymous"></script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HD1FBEJVM7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HD1FBEJVM7');
+</script>
+
 <body>
 
 <nav>
