--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <nav>
   <a href="/" class="nav-link">Home</a>
   <a href="/movies" class="nav-link">Movies</a>
+  <a href="/world" class ="nav-link">World</a>
 </nav>
 
 
