--- a/world.html
+++ b/world.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>World News Globe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="globe.css" />
 </head>
 <body>
 
