--- a/world.html
+++ b/world.html
@@ -29,7 +29,7 @@
   <script src="https://unpkg.com/d3"></script>
   <script>
     const world = Globe()
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
+      .globeImageUrl('https://unpkg.com/three-globe/example/img/earth-dark.jpg')
       .backgroundColor('#ffffff')
       .showAtmosphere(false)
       .polygonCapColor(() => 'rgba(0, 0, 0, 0.1)')
@@ -47,7 +47,7 @@
       });
 
     const container = document.getElementById('globe-container');
-    world(container);
+    container.appendChild(world());
 
     fetch('https://unpkg.com/three-globe/example/globe-data/ne_110m_admin_0_countries.geojson')
       .then(res => res.json())
